# rabia_hackathon-1_book

./: .gitignore  DEPLOYMENT.md  railway.json  render.yaml  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieve.py  test_api_manual.py
backend/tests/: conftest.py  test_api.py  test_contract.py  test_integration.py
frontend_book/: .env.local.example  .env.production  .vercel-trigger  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
frontend_book/docs/: intro.md
frontend_book/src/css/: custom.css
specs/001-rag-data-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-book-module1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gazebo-unity-module2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: plan.md  spec.md  tasks.md
specs/004-vla-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-docusaurus-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-rag-agent-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fastapi-backend-integration/: RUNTIME_VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+97 files in other folders)
