[project]
name = "rag-data-pipeline"
version = "0.1.0"
description = "RAG Data Pipeline for Physical AI & Robotics Book"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
rag-pipeline = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
